(rule
  (targets string_checks.ml)
  (deps string_checks.iml)
   (action
    (with-stdout-to string_checks.ml
       (run imandra-extract  string_checks.iml))))
       
(rule
  (targets model_tag_names.ml)
  (deps model_tag_names.iml)
   (action
    (with-stdout-to model_tag_names.ml
       (run imandra-extract  model_tag_names.iml))))
       
(rule
  (targets enum_tag_assoc.ml)
  (deps enum_tag_assoc.iml)
   (action
    (with-stdout-to enum_tag_assoc.ml
       (run imandra-extract  enum_tag_assoc.iml))))
       
(rule
  (targets string_assoc.ml)
  (deps string_assoc.iml)
   (action
    (with-stdout-to string_assoc.ml
       (run imandra-extract  string_assoc.iml))))
       
(rule
  (targets string_assoc_common.ml)
  (deps string_assoc_common.iml)
   (action
    (with-stdout-to string_assoc_common.ml
       (run imandra-extract  string_assoc_common.iml))))
       
(library
  (name string_factory)
  (public_name fix-engine.string_factory)
  (wrapped false)
  (flags (:standard -open Imandra_prelude -warn-error -A+8+39))
  (libraries imandra-base.prelude venue_types)
)
